docs/api/qiskit/0.19/qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.mdx
---
title: UnivariateVariationalDistribution (v0.19)
description: API reference for qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution
---

# UnivariateVariationalDistribution

<Class id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/components/uncertainty_models/univariate_variational_distribution.py" signature="UnivariateVariationalDistribution(num_qubits, var_form, params, low=0, high=1)" modifiers="class">
  The Univariate Variational Distribution.

  **Parameters**

  *   **num\_qubits** (`int`) – Number of qubits
  *   **var\_form** (`Union`\[[`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit"), [`VariationalForm`](qiskit.aqua.components.variational_forms.VariationalForm "qiskit.aqua.components.variational_forms.variational_form.VariationalForm")]) – Variational form
  *   **params** (`Union`\[`List`\[`float`], `ndarray`]) – Parameters for variational form
  *   **low** (`float`) – Lower bound
  *   **high** (`float`) – Upper bound

  ## Attributes

  <span id="univariatevariationaldistribution-high" />

  ### high

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.high">
    returns high
  </Attribute>

  <span id="univariatevariationaldistribution-low" />

  ### low

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.low">
    returns low
  </Attribute>

  <span id="univariatevariationaldistribution-num-target-qubits" />

  ### num\_target\_qubits

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.num_target_qubits">
    Returns the number of target qubits
  </Attribute>

  <span id="univariatevariationaldistribution-num-values" />

  ### num\_values

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.num_values">
    returns number of values
  </Attribute>

  <span id="univariatevariationaldistribution-probabilities" />

  ### probabilities

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.probabilities">
    returns probabilities
  </Attribute>

  <span id="univariatevariationaldistribution-values" />

  ### values

  <Attribute id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.values">
    returns values
  </Attribute>

  ## Methods

  <span id="univariatevariationaldistribution-build" />

  ### build

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build" signature="UnivariateVariationalDistribution.build(qc, q, q_ancillas=None, params=None)" />

  <span id="univariatevariationaldistribution-build-controlled" />

  ### build\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_controlled" signature="UnivariateVariationalDistribution.build_controlled(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds corresponding controlled sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="univariatevariationaldistribution-build-controlled-inverse" />

  ### build\_controlled\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_controlled_inverse" signature="UnivariateVariationalDistribution.build_controlled_inverse(qc, q, q_control, q_ancillas=None, use_basis_gates=True)">
    Adds controlled inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_control** ([*Qubit*](qiskit.circuit.Qubit "qiskit.circuit.Qubit")) – control qubit
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
    *   **use\_basis\_gates** (*bool*) – use basis gates for expansion of controlled circuit
  </Function>

  <span id="univariatevariationaldistribution-build-controlled-inverse-power" />

  ### build\_controlled\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_controlled_inverse_power" signature="UnivariateVariationalDistribution.build_controlled_inverse_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled, inverse, power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="univariatevariationaldistribution-build-controlled-power" />

  ### build\_controlled\_power

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_controlled_power" signature="UnivariateVariationalDistribution.build_controlled_power(qc, q, q_control, power, q_ancillas=None, use_basis_gates=True)">
    Adds controlled power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="univariatevariationaldistribution-build-inverse" />

  ### build\_inverse

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_inverse" signature="UnivariateVariationalDistribution.build_inverse(qc, q, q_ancillas=None)">
    Adds inverse of corresponding sub-circuit to given circuit

    **Parameters**

    *   **qc** ([*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit")) – quantum circuit
    *   **q** (*list*) – list of qubits (has to be same length as self.\_num\_qubits)
    *   **q\_ancillas** (*list*) – list of ancilla qubits (or None if none needed)
  </Function>

  <span id="univariatevariationaldistribution-build-inverse-power" />

  ### build\_inverse\_power

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_inverse_power" signature="UnivariateVariationalDistribution.build_inverse_power(qc, q, power, q_ancillas=None)">
    Adds inverse power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="univariatevariationaldistribution-build-power" />

  ### build\_power

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.build_power" signature="UnivariateVariationalDistribution.build_power(qc, q, power, q_ancillas=None)">
    Adds power of corresponding circuit. May be overridden if a more efficient implementation is possible
  </Function>

  <span id="univariatevariationaldistribution-get-num-qubits" />

  ### get\_num\_qubits

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.get_num_qubits" signature="UnivariateVariationalDistribution.get_num_qubits()">
    returns number of qubits
  </Function>

  <span id="univariatevariationaldistribution-get-num-qubits-controlled" />

  ### get\_num\_qubits\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.get_num_qubits_controlled" signature="UnivariateVariationalDistribution.get_num_qubits_controlled()">
    returns number of qubits controlled
  </Function>

  <span id="univariatevariationaldistribution-pdf-to-probabilities" />

  ### pdf\_to\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.pdf_to_probabilities" signature="UnivariateVariationalDistribution.pdf_to_probabilities(pdf, low, high, num_values)" modifiers="static">
    Takes a probability density function (pdf), and returns a truncated and discretized array of probabilities corresponding to it

    **Parameters**

    *   **pdf** (*function*) – probability density function
    *   **low** (*float*) – lower bound of equidistant grid
    *   **high** (*float*) – upper bound of equidistant grid
    *   **num\_values** (*int*) – number of grid points

    **Returns**

    array of probabilities

    **Return type**

    list
  </Function>

  <span id="univariatevariationaldistribution-required-ancillas" />

  ### required\_ancillas

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.required_ancillas" signature="UnivariateVariationalDistribution.required_ancillas()">
    returns required ancillas
  </Function>

  <span id="univariatevariationaldistribution-required-ancillas-controlled" />

  ### required\_ancillas\_controlled

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.required_ancillas_controlled" signature="UnivariateVariationalDistribution.required_ancillas_controlled()">
    returns required ancillas controlled
  </Function>

  <span id="univariatevariationaldistribution-set-probabilities" />

  ### set\_probabilities

  <Function id="qiskit.aqua.components.uncertainty_models.UnivariateVariationalDistribution.set_probabilities" signature="UnivariateVariationalDistribution.set_probabilities(quantum_instance)">
    Set Probabilities

    **Parameters**

    **quantum\_instance** ([*QuantumInstance*](qiskit.aqua.QuantumInstance "qiskit.aqua.QuantumInstance")) – Quantum instance
  </Function>
</Class>

